tests downgraded to JUnit4 to fix maven issues